<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lnrAcledgerDialog"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_mobile_title"
                android:textSize="@dimen/common_title_size"
                android:paddingLeft="15dp"/>

            <Button
                android:id="@+id/btnAddContactCancel"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_cancel"
                app:backgroundTint="@color/colorPrimaryDark"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                tools:ignore="MissingPrefix" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorDarkGrey"/>

        <LinearLayout
            android:id="@+id/lnrCashbookDurationChild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_mobile"
                            android:textSize="@dimen/common_content_size"/>

                        <LinearLayout
                            android:id="@+id/lnrCashbookDurationFrom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2"
                            android:padding="8dp"
                            android:gravity="center_vertical"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/rectangle_grey_border">

                            <EditText
                                android:id="@+id/edtAddContactMobile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.3"
                                android:background="@null"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/common_content_size"/>

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_mobile"
                                android:tint="@color/colorPrimaryDark"
                                android:layout_weight="1.7" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp">

                <Button
                    android:id="@+id/btnAddContactSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/btn_small_text_size"
                    android:background="@android:color/transparent"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>