<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/password_fragment_title_enter_new"
        android:textColor="@color/colorDark"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/password_fragment_edit_placeholder"
        android:inputType="numberPassword"
        android:saveEnabled="false"
        android:textColor="@color/colorDark"
        android:textSize="24sp" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:alignContent="stretch"
        app:alignItems="stretch"
        app:flexWrap="wrap">

        <Button
            android:id="@+id/button1"
            style="@style/AppTheme.FragmentPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="1"
            android:textSize="32sp"
            app:layout_flexBasisPercent="30%"
            app:layout_flexGrow="1" />

        <Button
            android:id="@+id/button2"
            style="@style/AppTheme.FragmentPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="2"
            android:textSize="32sp"
            app:layout_flexBasisPercent="30%"
            app:layout_flexGrow="1" />

        <Button
            android:id="@+id/button3"
            style="@style/AppTheme.FragmentPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="3"
            android:textSize="32sp"
            app:layout_flexBasisPercent="30%"
            app:layout_flexGrow="1" />

        <Button
            android:id="@+id/button4"
            style="@style/AppTheme.FragmentPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="4"
            android:textSize="32sp"
            app:layout_flexBasisPercent="30%"
            app:layout_flexGrow="1" />

        <Button
            android:id="@+id/button5"
            style="@style/AppTheme.FragmentPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="5"
            android:textSize="32sp"
            app:layout_flexBasisPercent="30%"
            app:layout_flexGrow="1" />

        <Button
            android:id="@+id/button6"
            style="@style/AppTheme.FragmentPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="6"
            android:textSize="32sp"
            app:layout_flexBasisPercent="30%"
            app:layout_flexGrow="1" />

        <Button
            android:id="@+id/button7"
            style="@style/AppTheme.FragmentPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="7"
            android:textSize="32sp"
            app:layout_flexBasisPercent="30%"
            app:layout_flexGrow="1" />

        <Button
            android:id="@+id/button8"
            style="@style/AppTheme.FragmentPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="8"
            android:textSize="32sp"
            app:layout_flexBasisPercent="30%"
            app:layout_flexGrow="1" />

        <Button
            android:id="@+id/button9"
            style="@style/AppTheme.FragmentPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="9"
            android:textSize="32sp"
            app:layout_flexBasisPercent="30%"
            app:layout_flexGrow="1" />

        <Button
            android:id="@+id/buttonExit"
            style="@style/AppTheme.FragmentPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="Exit"
            android:textSize="16sp"
            app:layout_flexBasisPercent="30%"
            app:layout_flexGrow="1" />

        <Button
            android:id="@+id/button0"
            style="@style/AppTheme.FragmentPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="0"
            android:textSize="32sp"
            app:layout_flexBasisPercent="30%"
            app:layout_flexGrow="1" />

        <ImageButton
            android:id="@+id/buttonClear"
            style="@style/AppTheme.FragmentPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            app:layout_flexBasisPercent="30%"
            app:layout_flexGrow="1"
            app:srcCompat="@drawable/ic_backspace_white_24dp" />
    </com.google.android.flexbox.FlexboxLayout>

    <Button
        android:id="@+id/buttonEnter"
        style="@style/AppTheme.FragmentPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:text="@string/password_fragment_enter"
        android:textSize="24sp" />
</LinearLayout>
